Updated page TechDraw ExportPageDXF/fr

--- a/wiki/fr/TechDraw_ExportPageDXF.html
+++ b/wiki/fr/TechDraw_ExportPageDXF.html
@@ -69,14 +69,12 @@
 <li>La fen&ecirc;tre de dialogue <b>Enregistrer le fichier DXF</b> s'ouvre.</li>
 <li>S&eacute;lectionnez un emplacement et un nom de fichier.</li></ol>
 <h3><span class="mw-headline" id="Limitations">Limitations</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li>Les dimensions radiales et de diam&egrave;tre ne s'exporteront correctement que si elles sont "&agrave; l'int&eacute;rieur" de l'arc.</li>
+<ul><li>Les cotes des rayons et des diam&egrave;tres ne s'exporteront correctement que si elles sont &laquo;&nbsp;&agrave; l'int&eacute;rieur&nbsp;&raquo; de l'arc.</li>
 <li>La mise &agrave; l'&eacute;chelle n'est pas prise en charge. Le DXF sera dessin&eacute; dans la taille r&eacute;elle de la feuille TechDraw.</li>
-<li>Les unit&eacute;s ne sont pas prises en charge. Le DXF sera dessin&eacute; en millim&egrave;tres (mm). Le texte de cote sera affich&eacute; exactement tel qu'il est affich&eacute; dans TechDraw.</li>
+<li>Les unit&eacute;s ne sont pas prises en charge. Le DXF sera dessin&eacute; en millim&egrave;tres (mm). Le texte de la cote sera affich&eacute; exactement tel qu'il est affich&eacute; dans TechDraw.</li>
 <li>TechDraw ne peut pas exporter un <a href="../fr/TechDraw_DraftView.html" title="TechDraw DraftView/fr">TechDraw Vue d'un objet Draft</a> ou une <a href="../fr/TechDraw_ArchView.html" title="TechDraw ArchView/fr">TechDraw Vue d'un objet Arch</a> vers DXF. Ces vues sont des &eacute;l&eacute;ments <a href="../fr/SVG.html" title="SVG/fr">SVG</a> g&eacute;n&eacute;r&eacute;s en interne par l'<a href="../fr/Draft_Workbench.html" title="Draft Workbench/fr">atelier Draft</a>, il n'y a donc pas de forme g&eacute;om&eacute;trique &agrave; exporter. Pour exporter une vue au format DXF, elle doit avoir &eacute;t&eacute; cr&eacute;&eacute;e avec <a href="../fr/TechDraw_View.html" title="TechDraw View/fr">TechDraw Vue</a> ou <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">TechDraw Projection de groupe</a>. Par exemple, s&eacute;lectionnez un <a href="../fr/Arch_SectionPlane.html" title="Arch SectionPlane/fr">Arch Plan de coupe</a>, puis utilisez <a href="../fr/Draft_Shape2DView.html" title="Draft Shape2DView/fr">Draft Vue 2D d'une forme</a> pour cr&eacute;er une forme de projection plate, puis utilisez <a href="../fr/TechDraw_View.html" title="TechDraw View/fr">TechDraw Vue</a> sur cet objet. Vous pouvez &eacute;galement s&eacute;lectionner les objets dans l'arborescence ou la fen&ecirc;tre 3D et exporter vers DXF &agrave; l'aide de <b>Fichier &rarr; <a href="../fr/Std_Export.html" title="Std Export/fr">Exporter</a></b>.</li>
 <li>Le cartouche d'une feuille est &eacute;galement un mod&egrave;le <a href="../fr/SVG.html" title="SVG/fr">SVG</a>, elle ne sera donc pas export&eacute;e au format DXF.</li>
 <li>En g&eacute;n&eacute;ral, TechDraw ne peut exporter au format DXF que les &eacute;l&eacute;ments pris en charge par la classe <code>Import::ImpExpDxfWrite</code> du <a href="../fr/Draft_DXF.html" title="Draft DXF/fr">module d'importation</a>.</li></ul>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -147,13 +145,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124184544
+Cached time: 20260124184730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.149 seconds
-Preprocessor visited node count: 443/1000000
+CPU time usage: 0.085 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 442/1000000
 Post&#8208;expand include size: 25494/2097152 bytes
 Template argument size: 10235/2097152 bytes
 Highest expansion depth: 6/100
@@ -163,19 +161,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.883      1 -total
- 25.57%   10.454      1 Template:TechDraw_Tools_navi/fr
- 21.40%    8.751      2 Template:Navigation_menu_2
- 13.55%    5.541      1 Template:Userdocnavi/fr
- 10.43%    4.263      1 Template:GuiCommand/fr
-  8.85%    3.619      1 Template:Code
-  8.43%    3.446      1 Template:Incode
-  7.34%    3.000      2 Template:FALSE
-  6.42%    2.626      2 Template:Docnav/fr
-  5.80%    2.370      1 Template:TRUE
+100.00%   24.420      1 -total
+ 25.13%    6.137      1 Template:TechDraw_Tools_navi/fr
+ 21.29%    5.199      2 Template:Navigation_menu_2
+ 15.98%    3.902      1 Template:Userdocnavi/fr
+ 10.23%    2.499      1 Template:GuiCommand/fr
+  9.23%    2.255      2 Template:Docnav/fr
+  8.76%    2.139      1 Template:Code
+  6.30%    1.539      1 Template:Incode
+  5.73%    1.400      2 Template:Button
+  5.14%    1.256      8 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181720-0!canonical and timestamp 20260124184544 and revision id 1743444. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181720-0!canonical and timestamp 20260124184730 and revision id 1743446. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
