--- a/wiki/fr/TechDraw_ExtensionArcLengthAnnotation.html
+++ b/wiki/fr/TechDraw_ExtensionArcLengthAnnotation.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionArcLengthAnnotation/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionArcLengthAnnotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionArcLengthAnnotation.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungHinweisBogenl&auml;nge (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionArcLengthAnnotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionArcLengthAnnotation (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionArcLengthAnnotation.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Annotazione lunghezza Arco (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionArcLengthAnnotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Etykieta d&#322;ugo&#347;ci &#322;uku (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionArcLengthAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw ExtensionArcLengthAnnotation
@@ -60,12 +60,9 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>S&eacute;lectionnez une ou plusieurs ar&ecirc;tes.</li>
-<li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionArcLengthAnnotation.svg&amp;filetimestamp=20240707195713&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionArcLengthAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Annotation de longueur d'arcs</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionArcLengthAnnotation.svg&amp;filetimestamp=20240707195713&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionArcLengthAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Annotation de longueur d'arcs</b> du menu.</li></ul></li></ol>
-</div>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionArcLengthAnnotation.svg&amp;filetimestamp=20240707195713&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionArcLengthAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Annotation de longueur d'arcs</b> du menu.</li>
+<li>La longueur totale de l'arc des ar&ecirc;tes est calcul&eacute;e et une annotation est ins&eacute;r&eacute;e.</li></ol>
 <p><br>
 </p>
 <div class="docnav">
@@ -113,34 +110,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124185109
+Cached time: 20260124185304
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.061 seconds
-Real time usage: 0.087 seconds
-Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 25759/2097152 bytes
-Template argument size: 10138/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.119 seconds
+Preprocessor visited node count: 341/1000000
+Post&#8208;expand include size: 25286/2097152 bytes
+Template argument size: 9994/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1651/5000000 bytes
+Unstrip post&#8208;expand size: 1655/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.381      1 -total
- 31.44%    5.465      1 Template:TechDraw_Tools_navi/fr
- 25.28%    4.394      2 Template:Navigation_menu_2
- 23.44%    4.074      1 Template:Userdocnavi/fr
- 13.84%    2.406      2 Template:Docnav/fr
- 11.87%    2.063      1 Template:GuiCommand/fr
-  6.84%    1.188      1 Template:Caption
-  5.01%    0.871      1 Template:Button
-  4.56%    0.792      1 Template:MenuCommand
+100.00%   21.663      1 -total
+ 37.72%    8.171      1 Template:TechDraw_Tools_navi/fr
+ 32.85%    7.117      2 Template:Navigation_menu_2
+ 17.15%    3.715      1 Template:Userdocnavi/fr
+ 15.06%    3.263      1 Template:GuiCommand/fr
+ 12.44%    2.695      2 Template:Docnav/fr
+  8.63%    1.870      1 Template:Caption
+  6.00%    1.300      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:329296-0!canonical and timestamp 20260124185109 and revision id 1743456. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:329296-0!canonical and timestamp 20260124185304 and revision id 1743458. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
