Updated page TechDraw ExtensionAreaAnnotation/fr

--- a/wiki/fr/TechDraw_ExtensionAreaAnnotation.html
+++ b/wiki/fr/TechDraw_ExtensionAreaAnnotation.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionAreaAnnotation/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionAreaAnnotation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionAreaAnnotation.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungFl&auml;chenangabe (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionAreaAnnotation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionAreaAnnotation (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionAreaAnnotation.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Annotazione calcolo Area (82% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionAreaAnnotation.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Oblicz obszar wybranych powierzchni (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionAreaAnnotation.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw ExtensionAreaAnnotation
@@ -60,13 +60,9 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionner une ou plusieurs faces.</li>
-<li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionAreaAnnotation.svg&amp;filetimestamp=20240707200110&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionAreaAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Annotation de surface</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionAreaAnnotation.svg&amp;filetimestamp=20240707200110&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionAreaAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Annotation de surface</b> du menu.</li></ul></li>
+<ol><li>S&eacute;lectionnez une ou plusieurs faces.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionAreaAnnotation.svg&amp;filetimestamp=20240707200110&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionAreaAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote de surface</b> du menu.</li>
 <li>La surface totale des faces est calcul&eacute;e et une annotation de surface est ins&eacute;r&eacute;e.</li></ol>
-</div>
 <h2><span class="mw-headline" id="Limitation">Limitation</span></h2>
 <p><span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>&nbsp;: l'outil ne peut pas g&eacute;rer les faces avec des ar&ecirc;tes incurv&eacute;es.
 </p>
@@ -119,35 +115,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124185433
+Cached time: 20260124185541
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.119 seconds
-Preprocessor visited node count: 392/1000000
-Post&#8208;expand include size: 26164/2097152 bytes
-Template argument size: 10233/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 384/1000000
+Post&#8208;expand include size: 25703/2097152 bytes
+Template argument size: 10101/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1606/5000000 bytes
+Unstrip post&#8208;expand size: 1610/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.737      1 -total
- 26.15%    8.299      1 Template:TechDraw_Tools_navi/fr
- 19.06%    6.049      2 Template:Navigation_menu_2
- 12.73%    4.039      1 Template:Userdocnavi/fr
- 10.83%    3.438      1 Template:PropertyData
- 10.17%    3.227      1 Template:VersionMinus/fr
-  9.65%    3.061      2 Template:Docnav/fr
-  9.06%    2.876      1 Template:GuiCommand/fr
-  6.44%    2.044      1 Template:Button
-  6.12%    1.942      1 Template:MenuCommand
+100.00%   25.416      1 -total
+ 30.34%    7.712      1 Template:TechDraw_Tools_navi/fr
+ 22.95%    5.834      2 Template:Navigation_menu_2
+ 17.86%    4.539      1 Template:PropertyData
+ 12.90%    3.278      1 Template:Userdocnavi/fr
+ 10.61%    2.696      1 Template:Variable
+ 10.37%    2.636      2 Template:Docnav/fr
+  8.88%    2.256      1 Template:GuiCommand/fr
+  7.30%    1.855      1 Template:VersionMinus/fr
+  5.38%    1.367      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:280578-0!canonical and timestamp 20260124185433 and revision id 1743460. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:280578-0!canonical and timestamp 20260124185541 and revision id 1743462. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
