--- a/wiki/fr/TechDraw_ExtensionCascadeHorizDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCascadeHorizDimension.html
@@ -21,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Attributs/modifications &rarr; Cascader horizontalement les cotes
+<td class="ctEven">TechDraw &rarr; Attributs/modifications &rarr; Cascader les cotes horizontales
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -116,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124185732
+Cached time: 20260124185956
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.094 seconds
+CPU time usage: 0.074 seconds
+Real time usage: 0.112 seconds
 Preprocessor visited node count: 356/1000000
-Post&#8208;expand include size: 26182/2097152 bytes
-Template argument size: 10499/2097152 bytes
+Post&#8208;expand include size: 26176/2097152 bytes
+Template argument size: 10493/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,18 +132,18 @@ Unstrip post&#8208;expand size: 1405/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.337      1 -total
- 38.69%    7.095      1 Template:TechDraw_Tools_navi/fr
- 28.24%    5.179      2 Template:Navigation_menu_2
- 15.94%    2.922      1 Template:Userdocnavi/fr
- 12.46%    2.285      1 Template:GuiCommand/fr
- 12.38%    2.271      2 Template:Docnav/fr
-  6.66%    1.221      1 Template:Caption
-  5.75%    1.055      1 Template:Button
-  5.10%    0.935      1 Template:MenuCommand
+100.00%   23.831      1 -total
+ 31.28%    7.454      1 Template:TechDraw_Tools_navi/fr
+ 22.31%    5.316      2 Template:Navigation_menu_2
+ 16.86%    4.019      1 Template:Userdocnavi/fr
+ 13.62%    3.246      1 Template:GuiCommand/fr
+ 13.50%    3.217      2 Template:Docnav/fr
+  9.03%    2.153      1 Template:MenuCommand
+  6.90%    1.643      1 Template:Button
+  6.18%    1.473      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277623-0!canonical and timestamp 20260124185731 and revision id 1743466. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277623-0!canonical and timestamp 20260124185956 and revision id 1743468. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
