Updated page TechDraw ExtensionChangeLineAttributes/fr

--- a/wiki/fr/TechDraw_ExtensionChangeLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionChangeLineAttributes.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionChangeLineAttributes/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionChangeLineAttributes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionChangeLineAttributes.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLinienmerkmale&Auml;ndern (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionChangeLineAttributes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionChangeLineAttributes (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionChangeLineAttributes.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cambia attributi linea (78% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionChangeLineAttributes.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Zmie&#324; atrybuty linii (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_ExtensionChangeLineAttributes.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#49440; &#49549;&#49457; &#48320;&#44221; (78% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -61,14 +61,12 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Sp&eacute;cifiez &agrave; votre convenance les attributs d'une ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
+<ol><li>Vous pouvez modifier les attributs d'une ligne avec l'outil <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>. <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">TechDraw Choix des attributs</a>.</li>
 <li>S&eacute;lectionnez une ou plusieurs lignes cosm&eacute;tiques et/ou lignes centrales.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionChangeLineAttributes.svg&amp;filetimestamp=20241126213021&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionChangeLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Modifier les attributs de lignes</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionChangeLineAttributes.svg&amp;filetimestamp=20241126213021&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionChangeLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Modifier les attributs de lignes</b> &agrave; partir du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionChangeLineAttributes.svg&amp;filetimestamp=20241126213021&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionChangeLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Modifier les attributs de lignes</b> du menu.</li></ul></li>
 <li>Les attributs des lignes s&eacute;lectionn&eacute;es sont mis &agrave; jour.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -116,34 +114,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125092847
+Cached time: 20260125093044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.097 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25998/2097152 bytes
-Template argument size: 10304/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.091 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 25985/2097152 bytes
+Template argument size: 10291/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1567/5000000 bytes
+Unstrip post&#8208;expand size: 1571/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.803      1 -total
- 36.52%    6.502      1 Template:TechDraw_Tools_navi/fr
- 26.59%    4.734      2 Template:Navigation_menu_2
- 16.68%    2.969      1 Template:Userdocnavi/fr
- 12.35%    2.198      2 Template:Docnav/fr
- 10.97%    1.954      1 Template:GuiCommand/fr
-  8.33%    1.483      1 Template:Caption
-  6.11%    1.087      1 Template:Button
-  5.96%    1.062      1 Template:MenuCommand
+100.00%   17.691      1 -total
+ 37.61%    6.653      1 Template:TechDraw_Tools_navi/fr
+ 26.70%    4.724      2 Template:Navigation_menu_2
+ 17.46%    3.089      1 Template:Userdocnavi/fr
+ 11.76%    2.080      2 Template:Docnav/fr
+ 11.19%    1.980      1 Template:GuiCommand/fr
+  6.65%    1.176      1 Template:Caption
+  6.19%    1.095      1 Template:Button
+  6.03%    1.066      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277534-0!canonical and timestamp 20260125092846 and revision id 1743490. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277534-0!canonical and timestamp 20260125093044 and revision id 1743494. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
